--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: pr-test
+name: tests
 
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the develop branch 
   pull_request:
-    branches: [ develop, master, release/* ]
+    branches: [ main, release/* ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,7 +25,7 @@ jobs:
       
       - name: install
         run: |
-          sudo apt-get install lua5.1
+          sudo apt-get install lua5.4
                 
       # Runs a single command using the runners shell
       - name: test
